--- a/source/stylesheets/layout/_footer.scss
+++ b/source/stylesheets/layout/_footer.scss
@@ -1,21 +1,23 @@
 #footer {
+
   background: #333333;
   padding: 30px 0;
   color: #CCCCCC;
-}
-#footer p {
+
+  p {
   margin-top: 17px;
-}
-#footer ul {
+  }
+  ul {
   margin-top: 10px;
-}
-#footer a {
+  }
+  a {
   color: #CCCCCC;
   font-size: 30px;
   letter-spacing: 20px;
   transition: color 0.5s ease;
   text-decoration: none;
-}
-#footer a:hover{
+  }
+  a:hover {
   color: yellow;
+  }
 }
