--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -39,3 +39,83 @@ h2 {
   font-size: 30px;
   justify-content: space around;
 }
+
+.header-flat-details {
+    display: flex;
+    align-items: center;
+    padding: 30px;
+    padding-left: 0;
+}
+
+body {
+    font-family: "Open Sans", "Helvetica", "sans-serif";
+    font-size: 16px;
+    line-height: 1.4;
+    color: #333333;
+    background-color: white;
+  }
+
+.header-flat {
+p {
+  font-weight: normal;
+  font-size: 14px;
+  color: #777777;
+}
+
+  h1 {
+    font-size: 18px;
+    margin-top: 0;
+  }
+}
+
+.header-flat form {
+    margin: 20px 0;
+    margin-right: 0;
+    background: #F4F4F4;
+    padding: 15px;
+    border-radius: 3px;
+}
+
+.header-flat-owner {
+    padding: 20px;
+}
+.text-center {
+    text-align: center;
+}
+
+  .img-circle {
+    border-radius: 50%;
+
+  img {
+    vertical-align: middle;
+  }
+  img {
+    border: 0;
+  }
+  * {
+    box-sizing: border-box;
+  }
+  img[Attributes Style] {
+    width: 80px;
+  }
+}
+
+.fondecran {
+background-size: cover;
+height: 500px;
+}
+
+
+#flat-data {
+    font-weight: normal;
+    font-size: 12px;
+    color: #797373;
+}
+.row {
+    margin-left: -15px;
+    margin-right: -15px;
+}
+
+.fa-wifi:before {
+    content: "";
+}
